--- a/刷题记录.md
+++ b/刷题记录.md
@@ -67,3 +67,60 @@
   1. 查找所有边界，找到所有的O，然后设为1
   2. 再把所有的O为X
   3. 然后把1改为O
+
+# 2020-04-26
+
+新题：
+- Leetcode-152 Maximum Product Subarray
+
+复习
+- Leetcode-53 Maximum Subarray
+  - 分治
+  - 动态规划
+  - Kadane's algorithm
+
+
+# 2020-04-27
+
+新题
+- Leetcode-260 Single Number III 异或
+
+
+# 2020-04-28
+
+复习：
+- Leetcode-120 Triangle DP
+- Leetcode-322 Coin change
+- Leetcode-102 树的层次遍历
+  - 广度优先
+  - 深度优先，传参数level
+
+
+
+# 2020-04-29
+
+复习：
+- Leetcode-433 Minimum Genetic Mutation
+
+新题：
+- Leetcode-873. Length of Longest Fibonacci Subsequence
+  - 动态规划
+  
+
+# 2020-04-30
+
+新题
+- Leetcode-300 最长上升子序列
+
+# 2020-05-03
+
+新题
+- Leetcode-5 最长回文子串 DP
+
+
+# 2020-05-06
+
+新题
+- Leetcode-860. Lemonade Change
+- Leetcode-122 Best Time to buy and sell Stock II
+- Leetcode-455 Assign cookies
