--- a/刷题记录.md
+++ b/刷题记录.md
@@ -124,3 +124,9 @@
 - Leetcode-860. Lemonade Change
 - Leetcode-122 Best Time to buy and sell Stock II
 - Leetcode-455 Assign cookies
+
+
+# 2020-06-08
+
+新题
+- Leetcode-29 求商 位运算
